# PySCES

./: .gitignore  README.md  debug_mi.py  setup_fixed.py  test_aracne.py  test_import.py
docs/: API_Reference.md  (+24 more)
pysces/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  __init__.py  environment.yml  pyproject.toml  setup.py  test_installation.py
pysces/.github/workflows/: ci.yml
pysces/aracne/: __init__.py
pysces/aracne/_cpp/: __init__.py
pysces/archive/aracne_cpp/: README.md  aracne_ext_fixed.cpp
pysces/backup/pysces/: __init__.py
pysces/backup/pysces/analysis/: clustering.py  master_regulators.py
pysces/backup/pysces/aracne/: core.py
pysces/backup/pysces/data/: census.py  loaders.py
pysces/backup/pysces/plotting/: __init__.py  plots.py
pysces/backup/pysces/viper/: regulons.py
pysces/docs/: API_Reference.md  Installation.md  MIGRATION_GUIDE.md  ROADMAP.md
pysces/examples/: aracne_census_example.py  aracne_debug.py  basic_workflow.ipynb  minimal_test.py  pipeline_validation_test.py  simple_viper_test.py  test_installation.py  validation_example.py  viper_anndata_test.py  viper_example.py
pysces/pysces/aracne/: __init__.py
pysces/pysces/aracne/_cpp/: aracne_ext.cpp
pysces/pysces/data/: __init__.py  preprocessing.py
pysces/pysces/viper/: activity.py
pysces/src/pysces/: __init__.py
pysces/src/pysces/analysis/: __init__.py
pysces/src/pysces/aracne/: core.py  mlx_optimized.py  numba_optimized.py
pysces/tests/: test_aracne.py  test_data.py  test_metacells.py  test_performance.py  test_validation.py  test_viper.py  utils.py
(+68 files in other folders)
